codegen/tests/ui/missing-return.rs
#[klyra_codegen::main]
async fn missing_return() {}
